--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Michael Man",
+  "author": "Michael Man", "Grace Hong"
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
