Added client-side messaging logic and server-side room logic

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Man",
-  "contributers": ["Grace Hong"],
+  "contributers": [
+    "Grace Hong"
+  ],
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
