--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "argon-design-system-react",
+  "name": "tigerchat-frontend",
   "version": "1.1.0",
   "description": "React version of Argon Design System by Creative Tim",
   "main": "index.js",
@@ -8,28 +8,12 @@
     "url": "git+https://github.com/creativetimofficial/argon-design-system-react.git"
   },
   "keywords": [
-    "react",
-    "reactjs",
-    "argon",
-    "argon-react",
-    "design",
-    "design-react",
-    "argon-design",
-    "argon-design-react",
-    "kit",
-    "react-kit",
-    "argon-design-system",
-    "argon-design-system-react",
-    "design-system-react"
   ],
-  "author": "Creative Tim",
+  "author": "Michael Man",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/creativetimofficial/argon-design-system-react/issues"
-  },
   "homepage": "https://demos.creative-tim.com/argon-design-system-react/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "REACT_APP_API_ENDPOINT=http://localhost:1738 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
