--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "An anonymous messaging service for Princeton students to connect.",
   "main": "index.js",
   "scripts": {
+    "dev": "REACT_SERVER=http://localhost:3000 node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Michael Man",
