--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "socket.io": "^3.0.5"
