--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://demos.creative-tim.com/argon-design-system-react/",
   "scripts": {
     "start": "REACT_APP_API_ENDPOINT=http://localhost:1738 react-scripts start",
+    "aws-dev": "REACT_APP_API_ENDPOINT=http://tigerchat.io:1738 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
