--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "REACT_SERVER=http://localhost:3000 node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "REACT_SERVER=http://tigerchat.io:3000 node server.js"
   },
   "author": "Michael Man",
   "contributers": [
