--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "type": "git",
     "url": "git+https://github.com/creativetimofficial/argon-design-system-react.git"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Michael Man",
   "license": "MIT",
   "homepage": "https://demos.creative-tim.com/argon-design-system-react/",
@@ -46,6 +45,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.4.1",
+    "react-scroll": "^1.8.1",
     "reactstrap": "8.4.1",
     "socket.io-client": "^3.0.5"
   },
