--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "socket.io": "^3.0.5"
+    "socket.io": "^3.0.5",
+    "uuid": "^8.3.2"
   }
 }
