--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# GRACE STOP USING RSTUDIO
+.Rhistory
+
 # Runtime data
 pids
 *.pid
