--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,13 @@
   "version": "1.1.0",
   "description": "React version of Argon Design System by Creative Tim",
   "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/creativetimofficial/argon-design-system-react.git"
-  },
   "keywords": [],
   "author": "Michael Man",
   "license": "MIT",
-  "homepage": "https://demos.creative-tim.com/argon-design-system-react/",
+  "homepage": "https://tigerchat.io",
   "scripts": {
     "start": "REACT_APP_API_ENDPOINT=http://localhost:1738 react-scripts start",
+    "start-windows": "setx REACT_APP_API_ENDPOINT 'http://localhost:1738' react-scripts start",	
     "aws-dev": "REACT_APP_API_ENDPOINT=http://tigerchat.io:1738 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
