--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,7 @@
   "license": "MIT",
   "homepage": "https://tigerchat.io",
   "scripts": {
-    "start": "REACT_APP_API_ENDPOINT=http://localhost:1738 react-scripts start",
-    "start-clean": "react-scripts start",
+    "start": "react-scripts start",
     "aws-dev": "REACT_APP_API_ENDPOINT=http://tigerchat.io:1738 react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test",
@@ -33,7 +32,7 @@
     "classnames": "2.2.6",
     "headroom.js": "0.11.0",
     "moment": "2.24.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.13.1",
     "nouislider": "14.1.1",
     "react": "16.12.0",
     "react-animated-dots": "^1.1.0",
